# ArsChrono_www

./: .gitignore  index.html  wrangler.jsonc
src/: 00-nawigacja-i-stopka.md  01-home.md  02-modele.md  03-galeria.md  04-grafiki.md  05-o-autorze.md  06-kontakt.md  07-wspomnieli-o-nas.md
tools/galleryeditor/: app.py  main.py  pyproject.toml
tools/galleryeditor/static/: app.js  style.css
tools/galleryeditor/templates/: index.html
tools/sync/: pyproject.toml
tools/sync/arschrono_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/sync/sync/: cli.py  config.py  injector.py  parser.py
